# poo

./: Aeroport.cpp  Aeroport.h  Angajati.cpp  Angajati.h  Avioane.cpp  Avioane.h  CMakeLists.txt  Meniu.cpp  Meniu.h  Pilot.cpp  Pilot.h  Stewardesa.cpp  Stewardesa.h  Zbor.h  descriere.txt  main.cpp
